--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,7 +2,7 @@ body {
 	margin-top: 50px;
 }
 
-.block {
-	border: 1px solid #000;
-	padding: 5px;
+.current-blocks {
+	padding-left: 0;
+	padding-right: 0;
 }
